[package]
name = "wasm"
version = "0.1.0"
authors = ["matkrin <matkrin@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
xterm-js-rs = { version = "0.1.2", features = ["xterm-addon-fit"] }
anyhow = "1.0.89"
js-sys = "0.3.70"
monkey = { path = "../monkey"}

[dependencies.web-sys]
version = "0.3.70"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'EventTarget',
  'MessageEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
